--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
-include.path=${php.global.include.path}
+file.reference.html-eventos=../../eventos
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.html-eventos}
 php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
