--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,9 @@
 file.reference.html-eventos=../../eventos
+file.reference.html-eventos-tema=../../eventos-tema
+file.reference.html-eventos_tema=../../eventos_tema
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.html-eventos}
+    ${file.reference.html-eventos-tema}
 php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
